--- a/views/BooksInformation.ejs
+++ b/views/BooksInformation.ejs
@@ -92,7 +92,7 @@
               src="<%= book.ImagePath %>"
               alt=""
               width="300"
-              class="rounded shadow"
+              class="shadow"
             />
           </div>
 
