--- a/views/BooksRegistration.ejs
+++ b/views/BooksRegistration.ejs
@@ -15,7 +15,7 @@
   <body>
     <body id="contenedorSupremo">
       <!-- NAVBAR -->
-      <nav class="navbar navbar-black bg-black">
+      <nav class="navbar navbar-black bg-black fixed-top mb-5">
         <div class="container-fluid">
           <div class="d-flex flex-row align-items-center">
             <a class="navbar-brand text-white" href="/Home"
@@ -71,6 +71,8 @@
         </div>
       </nav>
       <!-- NAVBAR -->
+
+    <div class="mt-5 mb-5 text-white">.</div>
 
     <!-- FORM -->
     <div
