--- a/views/Favorites.ejs
+++ b/views/Favorites.ejs
@@ -15,7 +15,7 @@
   </head>
   <body class="">
     <!-- NAVBAR -->
-    <nav class="navbar navbar-black bg-black">
+    <nav class="navbar navbar-black bg-black fixed-top">
       <div class="container-fluid">
         <div class="d-flex flex-row align-items-center">
           <a class="navbar-brand text-white" href="/Home"
@@ -67,6 +67,8 @@
       </div>
     </nav>
     <!-- NAVBAR -->
+
+    <div class="mt-5 mb-5 text-white">.</div>
 
     <h1 class="text-center mt-5 mb-5">List of favorites</h1>
 
