--- a/views/Index.ejs
+++ b/views/Index.ejs
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-black bg-black">
+    <nav class="navbar navbar-black bg-black fixed-top">
       <div class="container-fluid">
         <div class="d-flex flex-row align-items-center">
           <a class="navbar-brand text-white" href="/Home"
@@ -66,6 +66,8 @@
       </div>
     </nav>
     <!-- NAVBAR -->
+
+    <div class="mt-5 mb-5 text-white">.</div>
 
     <h1 class="mt-5">Biblo | Usuarios registrados</h1>
 
