--- a/views/BooksRegistration.ejs
+++ b/views/BooksRegistration.ejs
@@ -155,7 +155,7 @@
             <span class="input-group-text">$</span>
           </div>
           <input
-            type="number"
+            type="text"
             class="form-control text-center"
             name="price"
             id="price"
@@ -163,6 +163,7 @@
             max="10000"
             aria-label="Amount (to the nearest dollar)"
             placeholder="0.00"
+            step="0.01"
             value=""
           />
         </div>
