--- a/views/EditBook.ejs
+++ b/views/EditBook.ejs
@@ -111,16 +111,6 @@
           value="<%= book.Autor %>"
         />
 
-        <!-- <label for="description" class="form form-label"><strong>Descripcion</strong></label>
-        <input
-          type="text"
-          id="description"
-          name="description"
-          required 
-          class="form form-control text-center"
-          value=""
-        /> -->
-
         <div class="form-group">
           <label for="description" class="form form-label"><strong>Descripcion</strong></label>
           <textarea class="form-control" id="description" name="description" rows="3"><%= book.Description %></textarea>
@@ -138,25 +128,19 @@
           value="<%= book.PublishedYear %>"
         />
 
-        <!-- <label for="price" class="form form-label"><strong>Precio</strong></label>
-        <input
-          type="number"
-          id="price"
-          name="price"
-          min="0"
-          max="10000"
-          placeholder="$Precio"
-          required
-          class="form form-control text-center"
-          value=""
-        /> -->
         <label for="price" class="form form-label"><strong>Precio</strong></label>
-        <div class="input-group mb-3">
-          <div class="input-group-prepend">
-            <span class="input-group-text">$</span>
-          </div>
-          <input type="number" class="form-control text-center" name="price" id="price" min="1" max="10000" aria-label="Amount (to the nearest dollar)" placeholder="0.00" value="<%= book.Price %>">
-        </div>
+        <input
+          type="text"
+          class="form-control text-center"
+          name="price"
+          id="price"
+          min="1"
+          max="10000"
+          aria-label="Amount (to the nearest dollar)"
+          placeholder="0.00"
+          step="0.01"
+          value="<%= book.Price %> "
+        />
 
         <label for="stock" class="form form-label"><strong>Cantidad disponible</strong></label>
         <input
