--- a/views/BooksRegistration.ejs
+++ b/views/BooksRegistration.ejs
@@ -11,6 +11,10 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <script
+    src="https://kit.fontawesome.com/b55d7e5cd9.js"
+    crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <body id="contenedorSupremo">
@@ -40,6 +44,11 @@
                   >Favorites</a
                 >
               </li>
+              <li class="nav-item m-2">
+                <a class="nav-link active text-white" href="/Cesta"
+                  >Cesta</a
+                >
+              </li>
               <% if( session.Role === "Admin") { %>
               <li class="nav-item m-2">
                 <a class="nav-link active text-white" href="/"
@@ -56,7 +65,7 @@
           </div>
           <div class="w-25 d-flex justify-content-end align-items-center">
             <div class="d-flex justify-content-end align-items-center">
-              <p class="text-white m-3">
+              <p class="text-white m-3 ms-5">
                 <%= session.Name + " " + session.LastName %>
               </p>
               <img
