--- a/views/Cesta.ejs
+++ b/views/Cesta.ejs
@@ -4,17 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Biblo</title>
+    <title>Document</title>
     <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
-      crossorigin="anonymous"
+    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css"
+    rel="stylesheet"
+    integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
+    crossorigin="anonymous"
     />
+    <script
+    src="https://kit.fontawesome.com/b55d7e5cd9.js"
+    crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- NAVBAR -->
-    <nav class="navbar navbar-black bg-black fixed-top">
+    <nav class="navbar navbar-black bg-black fixed-top mb-5">
       <div class="container-fluid">
         <div class="d-flex flex-row align-items-center">
           <a class="navbar-brand text-white" href="/Home"
@@ -38,9 +42,7 @@
               >
             </li>
             <li class="nav-item m-2">
-              <a class="nav-link active text-white" href="/Cesta"
-                >Cesta</a
-              >
+              <a class="nav-link active text-white" href="/Favorites">Cesta</a>
             </li>
             <% if( session.Role === "Admin") { %>
             <li class="nav-item m-2">
@@ -56,7 +58,13 @@
         </div>
         <div class="w-25 d-flex justify-content-end align-items-center">
           <div class="d-flex justify-content-end align-items-center">
-            <p class="text-white m-3">
+            <a href="/Cesta" class="me-1 d-flex justify-content-center align-items-center">
+              <p class="text-white">
+                <i class="h3 fa fa-regular fa-bag-shopping d-inline-block align-middle"></i>
+                <span class="badge badge-danger bg-danger badge-pill position-absolute" style="top: 30px; right: 230px; border-radius: 50%;"><%= totalNoti %> </span>
+              </p>
+            </a>
+            <p class="text-white m-3 ms-5">
               <%= session.Name + " " + session.LastName %>
             </p>
             <img
@@ -72,54 +80,6 @@
     </nav>
     <!-- NAVBAR -->
 
-    <div class="mt-5 mb-5 text-white">.</div>
-
-    <h1 class="mt-5">Biblo | Usuarios registrados</h1>
-
-    <table class="table">
-      <thead>
-        <tr>
-          <th scope="col">#</th>
-          <th scope="col">Name</th>
-          <th scope="col">LastName</th>
-          <th scope="col">Email</th>
-          <th scope="col">UserName</th>
-          <th scope="col">Role</th>
-          <th scope="col">Status</th>
-        </tr>
-      </thead>
-      <tbody>
-        <% resultList.forEach((user) => {%>
-        <tr>
-          <th scope="row"><%= user.userID %></th>
-          <td><%= user.Name %></td>
-          <td><%= user.LastName %></td>
-          <td><%= user.Email %></td>
-          <td><%= user.UserName %></td>
-          <td><%= user.UserRole %></td>
-          <td
-            class="text-light bg-<%= user.EmailConfirmed === 'true' ? 'success' : 'danger' %>"
-          >
-            <% if ( user.EmailConfirmed !== "true") { %>
-              <form action="/ActivateUser" method="post">
-                <input type="text" hidden value="<%= user.userID %>" name="userIdInput"> 
-                <button class="btn-outline-danger bg-danger border-0 text-white" type="submit">Inactive</button>
-              </form>
-            <% } else {%>
-              <%= "Active" %> 
-            <% } %> 
-          </td>
-        </tr>
-        <% }) %>
-      </tbody>
-    </table>
-
-    <form method="POST" action="/comparar">
-      <input type="text" name="dato" placeholder="Introduce un UserName" />
-      <button type="submit">Buscar informacion</button>
-    </form>
-
-    <a href="/Register">Registrar nuevo usuario</a>
-    <a href="/SignIn">Iniciar sesion</a>
+    <div class="mt-5 mb-5">.</div>
   </body>
 </html>
