--- a/views/EditBook.ejs
+++ b/views/EditBook.ejs
@@ -11,6 +11,10 @@
       integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ"
       crossorigin="anonymous"
     />
+    <script
+    src="https://kit.fontawesome.com/b55d7e5cd9.js"
+    crossorigin="anonymous"
+    ></script>
   </head>
   <body>
         <!-- NAVBAR -->
@@ -39,6 +43,11 @@
                     >Favorites</a
                   >
                 </li>
+                <li class="nav-item m-2">
+                  <a class="nav-link active text-white" href="/Cesta"
+                    >Cesta</a
+                  >
+                </li>
                 <% if( session.Role === "Admin") { %>
                 <li class="nav-item m-2">
                   <a class="nav-link active text-white" href="/"
@@ -55,7 +64,13 @@
             </div>
             <div class="w-25 d-flex justify-content-end align-items-center">
               <div class="d-flex justify-content-end align-items-center">
-                <p class="text-white m-3">
+                <a href="/Cesta" class="me-1 d-flex justify-content-center align-items-center">
+                  <p class="text-white">
+                    <i class="h3 fa fa-regular fa-bag-shopping d-inline-block align-middle"></i>
+                    <span class="badge badge-danger bg-danger badge-pill position-absolute" style="top: 30px; right: 230px; border-radius: 50%;"><%= totalNoti %> </span>
+                  </p>
+                </a>
+                <p class="text-white m-3 ms-5">
                   <%= session.Name + " " + session.LastName %>
                 </p>
                 <img
