Some important changes to shopping car

--- a/views/BooksIndex.ejs
+++ b/views/BooksIndex.ejs
@@ -68,10 +68,8 @@
           <input
             name="searchName"
             type="text"
-            class="form-control rounded me-2 border-0"
+            class="me-3 form-control rounded"
             placeholder="Buscar"
-            aria-label="Search"
-            aria-describedby="search-addon"
             width="200"
             value="<%= nameSearched !== "" ? nameSearched : "" %>"
           />
