--- a/views/Cesta.ejs
+++ b/views/Cesta.ejs
@@ -15,8 +15,9 @@
     src="https://kit.fontawesome.com/b55d7e5cd9.js"
     crossorigin="anonymous"
     ></script>
+    <link rel="stylesheet" href="/css/Cesta.css">
   </head>
-  <body>
+  <body style="background-color: #EAEDED;">
     <!-- NAVBAR -->
     <nav class="navbar navbar-black bg-black fixed-top mb-5">
       <div class="container-fluid">
@@ -79,6 +80,48 @@
       </div>
     </nav>
     <!-- NAVBAR -->
+
+    <!-- SEPARADOR -->
+    <div class="text-white mt-5 mb-5">.</div>
+    <!-- SEPARADOR -->
+
+    <!-- CONTENIDO PARA LA CESTA -->
+    
+      <div class="container p-1 divContainer">
+        <div class="bg-white w-100 p-4">
+          <div class="d-flex align-items-center justify-content-between">
+            <h3>Cesta</h3>
+            <p class="mt-5 mb-0 fw-medium">Precio</p>
+          </div>
+          <hr>
+          <% allShoppingCar.forEach((item) => { %>
+          <div class=" d-flex flex-row">
+            <div>
+              <img src="<%= item.bookImagePath %>" width="120" alt="">
+            </div>
+            <div class="w-100 ms-5">
+              <p class="fs-5 fw-medium"><%= item.bookTitle %></p>
+              <p class="fw-bold" style="font-size: 15px;">Tapa blanda</p>
+              <p class="" style="font-size: 15px; color: yellowgreen;">diponible</p>
+              <a href="" id="moreInformation">Mas informacion</a>
+              <div class="d-flex flex-row justify-content-start align-items-center mt-2">
+                <p id="bookAmountQuantity" class="me-2 shadow">Cant.: <%= item.bookAmount %> </p>
+                <p>|</p>
+                <p id="deleteBook" class="text-primary">Eliminar</p>
+              </div>
+            </div>
+            <div>
+              <p class="fw-bold fs-4">US$<%= item.bookPrice %> </p>
+            </div>
+          </div>
+          <hr>
+          <% }) %> 
+          <div class="d-flex mt-0 justify-content-end">
+            <p class="fs-5">Subtotal (1 producto): <strong class="fs-4">US$<%= subtotal %></strong></p>
+          </div>
+        </div>
+      </div> 
+    <!-- CONTENIDO PARA LA CESTA -->
 
     <div class="mt-5 mb-5">.</div>
   </body>
